[gd_scene load_steps=14 format=3 uid="uid://c2lv8pxfcnayg"]

[ext_resource type="Script" uid="uid://xbsuakcyg2q2" path="res://scenes/PauseMenu/history_log.gd" id="1_op6go"]
[ext_resource type="FontFile" uid="uid://bbfeoo2kuf30n" path="res://addons/icons-fonts/icons_fonts/MaterialIcons/material_design_icons.ttf" id="1_yx0pc"]
[ext_resource type="Script" uid="uid://cgbqtpdgyaxq3" path="res://addons/advanced-text/nodes/AdvancedTextLabel.gd" id="2_8jngy"]
[ext_resource type="Script" uid="uid://sfoyl3fbn8so" path="res://addons/icons-fonts/nodes/FontIcon.gd" id="2_op6go"]
[ext_resource type="Script" uid="uid://diswvoymuh7fq" path="res://addons/icons-fonts/resources/FontIconSetting.gd" id="3_wm0r8"]
[ext_resource type="Resource" uid="uid://6ioam3qiqsqa" path="res://addons/visualnovelkit/default_markups/def_markdown.tres" id="3_yx0pc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xgq2h"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_op6go"]

[sub_resource type="LabelSettings" id="LabelSettings_pv8bc"]
font = ExtResource("1_yx0pc")
font_size = 32
shadow_size = 0
shadow_color = Color(1, 1, 1, 1)
shadow_offset = Vector2(0, 0)

[sub_resource type="Resource" id="Resource_73hfd"]
script = ExtResource("3_wm0r8")
icon_font = "MaterialIcons"
icon_name = "chat"
icon_size = 32
icon_color = Color(1, 1, 1, 1)
outline_color = Color(1, 1, 1, 1)
outline_size = 0
shadow_color = Color(1, 1, 1, 1)
shadow_size = 0
shadow_offset = Vector2(0, 0)

[sub_resource type="Resource" id="Resource_op6go"]
script = ExtResource("3_wm0r8")
icon_font = "MaterialIcons"
icon_name = "chat-question"
icon_size = 32
icon_color = Color(1, 1, 1, 1)
outline_color = Color(1, 1, 1, 1)
outline_size = 0
shadow_color = Color(1, 1, 1, 1)
shadow_size = 0
shadow_offset = Vector2(0, 0)
metadata/_custom_type_script = "uid://diswvoymuh7fq"

[sub_resource type="Resource" id="Resource_wm0r8"]
script = ExtResource("3_wm0r8")
icon_font = "MaterialIcons"
icon_name = "menu"
icon_size = 32
icon_color = Color(1, 1, 1, 1)
outline_color = Color(1, 1, 1, 1)
outline_size = 0
shadow_color = Color(1, 1, 1, 1)
shadow_size = 0
shadow_offset = Vector2(0, 0)

[sub_resource type="Resource" id="Resource_pv8bc"]
script = ExtResource("3_wm0r8")
icon_font = "MaterialIcons"
icon_name = "alert"
icon_size = 32
icon_color = Color(1, 1, 1, 1)
outline_color = Color(1, 1, 1, 1)
outline_size = 0
shadow_color = Color(1, 1, 1, 1)
shadow_size = 0
shadow_offset = Vector2(0, 0)

[node name="HistoryLog" type="PanelContainer" node_paths=PackedStringArray("character_name_label", "dialogue_label")]
self_modulate = Color(1, 1, 1, 0.5)
offset_right = 1280.0
offset_bottom = 85.0
size_flags_horizontal = 3
script = ExtResource("1_op6go")
character_name_label = NodePath("VBoxContainer/HBoxContainer/SpeakerLabel")
dialogue_label = NodePath("VBoxContainer/DialogueLabel")
disabled = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5
theme_override_styles/separator = SubResource("StyleBoxEmpty_xgq2h")

[node name="TabContainer" type="TabContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxEmpty_op6go")
current_tab = 0
clip_tabs = false
tabs_visible = false

[node name="SayIcon" type="Label" parent="VBoxContainer/HBoxContainer/TabContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "󰭹"
label_settings = SubResource("LabelSettings_pv8bc")
script = ExtResource("2_op6go")
icon_settings = SubResource("Resource_73hfd")
metadata/_custom_type_script = "uid://sfoyl3fbn8so"
metadata/_tab_index = 0

[node name="AskIcon" type="Label" parent="VBoxContainer/HBoxContainer/TabContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "󱜸"
label_settings = SubResource("LabelSettings_pv8bc")
script = ExtResource("2_op6go")
icon_settings = SubResource("Resource_op6go")
metadata/_custom_type_script = "uid://sfoyl3fbn8so"
metadata/_tab_index = 1

[node name="MenuIcon" type="Label" parent="VBoxContainer/HBoxContainer/TabContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "󰍜"
label_settings = SubResource("LabelSettings_pv8bc")
script = ExtResource("2_op6go")
icon_settings = SubResource("Resource_wm0r8")
metadata/_custom_type_script = "uid://sfoyl3fbn8so"
metadata/_tab_index = 2

[node name="NotifyIcon" type="Label" parent="VBoxContainer/HBoxContainer/TabContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "󰀦"
label_settings = SubResource("LabelSettings_pv8bc")
script = ExtResource("2_op6go")
icon_settings = SubResource("Resource_pv8bc")
metadata/_custom_type_script = "uid://sfoyl3fbn8so"
metadata/_tab_index = 3

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5
theme_override_styles/separator = SubResource("StyleBoxEmpty_xgq2h")

[node name="SpeakerLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
clip_contents = false
custom_minimum_size = Vector2(30, 40)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
mouse_force_pass_scroll_events = false
fit_content = true
scroll_active = false
script = ExtResource("2_8jngy")
advanced_text = "# Speaker [mi:chat] :speech_balloon:
"
parser = ExtResource("3_yx0pc")
metadata/_custom_type_script = "uid://cgbqtpdgyaxq3"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_xgq2h")

[node name="DialogueLabel" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
clip_contents = false
custom_minimum_size = Vector2(16, 30)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/bold_italics_font_size = 22
theme_override_font_sizes/italics_font_size = 22
theme_override_font_sizes/mono_font_size = 22
theme_override_font_sizes/normal_font_size = 22
theme_override_font_sizes/bold_font_size = 22
fit_content = true
script = ExtResource("2_8jngy")
advanced_text = "@rainbow 0.2,10,20 {Speaker say something gay} [mi:chat] :speech_balloon:
"
parser = ExtResource("3_yx0pc")
metadata/_custom_type_script = "uid://cgbqtpdgyaxq3"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5
theme_override_styles/separator = SubResource("StyleBoxEmpty_xgq2h")

[node name="AnswerLabel" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
clip_contents = false
custom_minimum_size = Vector2(16, 30)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/bold_italics_font_size = 22
theme_override_font_sizes/italics_font_size = 22
theme_override_font_sizes/mono_font_size = 22
theme_override_font_sizes/normal_font_size = 22
theme_override_font_sizes/bold_font_size = 22
fit_content = true
script = ExtResource("2_8jngy")
advanced_text = " **Anwser:** _some choice_ "
parser = ExtResource("3_yx0pc")
metadata/_custom_type_script = "uid://cgbqtpdgyaxq3"
